[project]
name = "layla-client"
version = "0.0.2"
description = "OCR Service Client for Layla"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typeguard>=4.4.4",
    "pydantic>=2.0.0",
]
